--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,17 @@ results/
 
 # until figure out which files I will change in package, do not put any on git
 ml-agents/*
-!ml-agents/ml-agents/
+!ml-agents/
 ml-agents/ml-agents/*
-!ml-agents/ml-agents/mlagents/
+!ml-agents/ml-agents/
 ml-agents/ml-agents/mlagents/*
-!ml-agents/ml-agents/mlagents/trainers/
+!ml-agents/ml-agents/mlagents/
 ml-agents/ml-agents/mlagents/trainers/*
-!ml-agents/ml-agents/mlagents/trainers/torch_entities/
+!ml-agents/ml-agents/mlagents/trainers/
 ml-agents/ml-agents/mlagents/trainers/torch_entities/*
-!ml-agents/ml-agents/mlagents/trainers/torch_entities/components/
+!ml-agents/ml-agents/mlagents/trainers/torch_entities/
 ml-agents/ml-agents/mlagents/trainers/torch_entities/components/*
-!ml-agents/ml-agents/mlagents/trainers/torch_entities/components/reward_providers/
+!ml-agents/ml-agents/mlagents/trainers/torch_entities/components/
 ml-agents/ml-agents/mlagents/trainers/torch_entities/components/reward_providers/*
+!ml-agents/ml-agents/mlagents/trainers/torch_entities/components/reward_providers/
 !ml-agents/ml-agents/mlagents/trainers/torch_entities/components/reward_providers/curiosity_reward_provider.py
